samples/_failures_safe/1761277481_a35c0e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a7f7881a.c: In function ‘main’:
./samples/SAFE/__tmp_a7f7881a.c:149:9: error: expected declaration or statement at end of input
  149 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_a7f7881a.c:149:9: error: expected declaration or statement at end of input
